--- a/angular-block-ui.0.0.11.nuspec
+++ b/angular-block-ui.0.0.11.nuspec
@@ -4,16 +4,16 @@
         <id>angular-block-ui</id>
         <version>0.0.11</version>
         <title>Angular BlockUI</title>
-        <authors>Mike Alsup,Null McNull,Jaans</authors>
-        <owners>Mike Alsup,Null McNull,Jaans</owners>
+        <authors>Null McNull,Jaans</authors>
+        <owners>Null McNull,Jaans</owners>
         <projectUrl>https://github.com/Jaans/angularjs-block-ui-nuget</projectUrl>
         <iconUrl>https://secure.gravatar.com/avatar/6e1b5ab3ef1593413f1bee4e5a6e6ae7?s=140&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>The jQuery BlockUI Plugin from Mika Alsup, wrapped in an AngularJS Directive by Null McNull, packaged into NuGet by Jaans.</description>
+        <description>BlockUI wrapped in an AngularJS Directive by Null McNull, packaged into NuGet by Jaans.</description>
         <releaseNotes>Refer to McNull's GitHub page for details:
 https://github.com/McNull/angular-block-ui</releaseNotes>
         <copyright />
-        <tags>blockUI block-ui angular angularjs SPA jquery</tags>
+        <tags>blockUI block-ui angular angularjs SPA</tags>
     </metadata>
     <files>
         <file src="Content\angular-block-ui.css" target="content\Content\angular-block-ui.css" />
